@@ -9,7 +9,7 @@
    object    => 'category',
    title     => 'Publish a Category',
    select    => $select,
-   fields    => [qw(uri)],
+   fields    => [(@$sites > 1 ? 'site' : () ), 'uri'],
    addition  => '',
    profile   => undef,
    exclude   => $exclude,
@@ -32,6 +32,12 @@ my @constrain;
 if (my $site_id = $c->get_user_cx(get_user_id)
     && get_pref("Filter by Site Context")) {
     @constrain = ( constrain => {  site_id => $site_id } );
+}
+
+my $sites = $c->get('__SITES__');
+unless ($sites) {
+    $sites = Bric::Biz::Site->list({ active => 1 });
+    $c->set('__SITES__', $sites);
 }
 </%init>
 
